--- a/src/app.html
+++ b/src/app.html
@@ -5,15 +5,35 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<title>Wieder Dabei - Zurück in den Job</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-			
+
 		<!-- Open Graph (Facebook, LinkedIn, ...) -->
 		<meta property="og:title" content="Wieder Dabei - Zurück in den Job" />
-		<meta property="og:description" content="Nicht mehr vermittelbar? Schluss damit. Du bist nicht das Problem. 
-		Wir finden dir einen passenden Job mit Sinn." />
+		<meta
+			property="og:description"
+			content="Nicht mehr vermittelbar? Schluss damit. Du bist nicht das Problem. 
+		Wir finden dir einen passenden Job mit Sinn."
+		/>
 		<meta property="og:url" content="https://wiederdabei.de/" />
 		<meta property="og:type" content="website" />
 
 		%sveltekit.head%
+
+		<!-- Hotjar Tracking Code for Website 6377167 (Name fehlt) -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 6377167, hjsv: 6 };
+				a = o.getElementsByTagName('head')[0];
+				r = o.createElement('script');
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
